Fixed, text overflow on article's summary (listing page)

--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -152,6 +152,8 @@ body.page {
   main > article {
     border: none;
     box-shadow: none;
+    word-wrap: break-word;
+    overflow: hidden;
   }
 }
 
